fix: hidden scrollbar, updated favicon to match app logo

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,21 @@ html, body, #root {
   background: #333;
   border-radius: 3px;
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+div {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+div::-webkit-scrollbar {
+  display: none;
+}
